--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -299,6 +299,16 @@ docker run \
 
 For more information about the Docker syntax, see <a href="https://docs.docker.com/engine/reference/run/">Docker run reference</a>
 
+To check if \`MIRA\` container is built successfully
+
+``` bash
+docker container ps
+```
+
+To access \`MIRA\` dashboard on the host network
+
+Type in **http://localhost:8080** in your preferred web browse and check if the dashboard is indeed hosted there
+
 ## 2. <a href="https://docs.docker.com/compose/">Docker-Compose</a>
 
 ***Docker Compose*** is a tool for running multi-container applications on Docker defined using the Compose file format. Default is <b>docker-compose.yml</b>.
